z-index issue resolved

--- a/src/components/interviewVideos/InterviewVideos.css
+++ b/src/components/interviewVideos/InterviewVideos.css
@@ -24,7 +24,7 @@
   color: #3f3f3f;
   padding-bottom: 1.5rem;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .interview-videos-tabs {
